overlays/dev/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-flask-webapp
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
